sort.basic.insertion.AlgInsertionSort.scala.error
Erreur de compilation :
AlgInsertionSort:17: error: Unmatched closing brace '}' ignored here
}
^